--- a/Q-Search_All_in_one.conf
+++ b/Q-Search_All_in_one.conf
@@ -150,7 +150,7 @@ hostname = duckduckgo.com
 ^https:\/\/duckduckgo.com\/\?q=ph\+([^&]+).+ url 302 https://cn.pornhub.com/video/search?search=$1
 
 # xv  (xvideos) 
-^https:\/\/duckduckgo.com\/\?q=xv\+([^&]+).+ url 302 https://www.xvideos.com/video/?k=$1
+^https:\/\/duckduckgo.com\/\?q=xv\+([^&]+).+ url 302 https://www.xvideos.com/?k=$1
 
 # gd  (Google Drive)
 ^https:\/\/duckduckgo.com\/\?q=gd\+([^&]+).+ url 302 https://www.google.com/search?q=%22Google+Drive%22+$1
