--- a/script/rewrite/js_rewrite.conf
+++ b/script/rewrite/js_rewrite.conf
@@ -1,4 +1,4 @@
-MITM = lovezbapi.dydfdzjs.com.cn,hot.ios.mitaozhibo.org
+hostname = lovezbapi.dydfdzjs.com.cn,hot.ios.mitaozhibo.org
 
 ^https:\/\/lovezbapi\.dydfdzjs\.com\.cn\/api\/public\/\?.*&service=(Home|Live)\.(?!getConfig).* url script-response-body https://raw.githubusercontent.com/976504184/qx/master/script/rewrite/love.js
 
