--- a/script/rewrite/js_rewrite.conf
+++ b/script/rewrite/js_rewrite.conf
@@ -2,5 +2,5 @@ hostname = lovezbapi.dydfdzjs.com.cn,hot.ios.mitaozhibo.org
 
 ^https:\/\/lovezbapi\.dydfdzjs\.com\.cn\/api\/public\/\?.*&service=(Home|Live)\.(?!getConfig).* url script-response-body https://raw.githubusercontent.com/976504184/qx/master/script/rewrite/love.js
 
-^http:\/\/hot\.ios\.mitaozhibo\.org\/version\.json url script-response-body https://raw.githubusercontent.com/976504184/qx/master/script/rewrite/love_version.js
+^http:\/\/hot\.ios\.mitaozhibo\.org\/version\.json url reject
 
