--- a/script/rewrite/js_rewrite.conf
+++ b/script/rewrite/js_rewrite.conf
@@ -1,6 +1,6 @@
-hostname = lovezbapi.3d7bb7u.cn
+hostname = lv.ehbnj.cn
 
-^https:\/\/lovezbapi\.3d7bb7u\.cn\/api\/public\/\?.*&service=(Home|Live)\.(?!getConfig).* url script-response-body https://raw.githubusercontent.com/976504184/qx/master/script/rewrite/love.js
+^https:\/\/lv\.ehbnj\.cn\/api\/public\/\?.*&service=(Home|Live)\.(?!getConfig).* url script-response-body https://raw.githubusercontent.com/976504184/qx/master/script/rewrite/love.js
 
 #^http:\/\/hot\.ios\.mitaozhibo\.org\/version\.json url reject
 
