--- a/script/rewrite/js_rewrite.conf
+++ b/script/rewrite/js_rewrite.conf
@@ -1,6 +1,6 @@
-hostname = lv.ehbnj.cn
+hostname = txlove-lv.fknjhu.cn
 
-^https:\/\/lv\.ehbnj\.cn\/api\/public\/\?.*&service=(Home|Live)\.(?!getConfig).* url script-response-body https://raw.githubusercontent.com/976504184/qx/master/script/rewrite/love.js
+^https:\/\/txlove-lv\.fknjhu\.cn\/api\/public\/\?.*&service=(Home|Live)\.(?!getConfig).* url script-response-body https://raw.githubusercontent.com/976504184/qx/master/script/rewrite/love.js
 
 #^http:\/\/hot\.ios\.mitaozhibo\.org\/version\.json url reject
 
